--- a/pm/app/config.ini
+++ b/pm/app/config.ini
@@ -34,18 +34,18 @@ db.lazy = TRUE
 
 ;mode.production = TRUE
 
-[production < common]
+[development  < common]
 db.profiler = true
-db.server = localhost
-db.database = pm
-db.username = root
-db.password = 
+db.host = 'mysql5-17.perso'
+db.database = edoveyhuiiic
+db.username = edoveyhuiiic
+db.password = 03ea6c100077
 db.driver = mysqli
 
-[development < common]
+[production < common]
 db.profiler = true
-db.server = localhost
-db.database = pm
-db.username = root
-db.password = 
+db.host = 'mysql5-17.perso'
+db.database = edoveyhuiiic
+db.username = edoveyhuiiic
+db.password = 03ea6c100077
 db.driver = mysqli
