--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,6 +1,8 @@
 # disable directory listing
 Options -Indexes
 
+SetEnv PHP_VER 5_TEST
+
 # configure PHP
 # <IfModule mod_php5.c>
 #    php_flag magic_quotes_gpc off
