--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
 file.reference.pm-temp=pm/temp
 file.reference.www-webtemp=www/webtemp
 ignore.path=\
