přepínání vzhledů a přidán další vzhled... menší úpravy v settings

--- a/pm/app/config.ini
+++ b/pm/app/config.ini
@@ -28,6 +28,12 @@ security.secretKey = bq4KigCm5pWReqmyRpf2rb3evbLIj1yUTpt0Qvtb4dz5uebzb7dkoGV33fK
 security.shortSalt1 = s5o ; několik málo znaků
 security.shortSalt2 = 9cflI ; několik málo znaků
 
+; translator
+;variable.langDir = %appDir%/lang ; složka s překlady
+;variable.lang = cs ; výchozí jazyk
+;service.Nette-ITranslator.factory = "NetteTranslator\\Gettext::getTranslator" ; nastavení
+;service.Nette-ITranslator.run = TRUE ; samotné zapnutí
+
 ; database
 db.charset = utf8
 db.lazy = TRUE
