telefon a email vždy zobrazen pod menu + možnost jejich zadání v /settings

--- a/pm/app/config.ini
+++ b/pm/app/config.ini
@@ -4,6 +4,14 @@
 ; If you don't protect this directory from direct web access, anybody will be able to see your passwords.
 ; http://nette.org/security-warning
 ;
+; Co jsem zapoměl dát do absolventské práce
+; -----------------------------------------
+;
+; o vlivu SEO, automatická kanonizace adres, nofollow pro přihlášení a chyby
+; cache
+; přihlášení s otiskem hesla
+; zabezpečení pro oprávnění administrátora
+;
 [common]
 ; PHP configuration
 php.date.timezone = "Europe/Prague"
