--- a/www/.htaccess
+++ b/www/.htaccess
@@ -18,5 +18,5 @@ SetEnv PHP_VER 5_TEST
 	# front controller
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteRule !\.(pdf|js|ico|gif|jpg|png|css|rar|zip|tar\.gz)$ index.php [L]
+	RewriteRule !(\.(pdf|js|ico|gif|jpg|png|css|rar|zip|tar\.gz)|prace)$ index.php [L]
 </IfModule>
